--- a/roles/antix/tasks/files.yml
+++ b/roles/antix/tasks/files.yml
@@ -36,6 +36,7 @@
   become_user: "{{ user }}"
   command:
     cmd: "nitrogen --set-auto --save /usr/share/wallpaper/debian.jpg"
+  ignore_errors: true
 
 - name: install Araita-Dark theme
   tags: theme
@@ -131,7 +132,7 @@
 
 - name: download Teams AppImage
   get_url: 
-    url: https://github.com/IsmaelMartinez/teams-for-linux/releases/download/v1.3.23/teams-for-linux-1.3.23.AppImage
+    url: https://github.com/IsmaelMartinez/teams-for-linux/releases/download/v2.3.0/teams-for-linux-2.3.0.AppImage
     dest: /home/{{ user }}/Downloads/
     mode: +x
     owner: "{{ user }}"
