--- a/roles/debian/tasks/oh-my-posh.yml
+++ b/roles/debian/tasks/oh-my-posh.yml
@@ -1,15 +1,7 @@
-- name: install oh-my-posh
-  tags: oh-my-posh,git
-  get_url:
-    url: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64
-    dest: /usr/local/bin/oh-my-posh
-    mode: +x
+---
 
-- name: set oh-my-posh to executable
-  tags: oh-my-posh
-  file:
-    path: /usr/local/bin/oh-my-posh
-    mode: +x
+- name: install oh-my-posh
+  shell: curl -s https://ohmyposh.dev/install.sh | bash -s
 
 - name: install oh-my-posh themes
   tags: oh-my-posh
@@ -20,3 +12,29 @@
     mode: u+rw
     owner: "{{ user }}"
     group: "{{ user }}"
+
+
+
+
+# - name: install oh-my-posh
+#   tags: oh-my-posh,git
+#   get_url:
+#     url: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64
+#     dest: /usr/local/bin/oh-my-posh
+#     mode: +x
+
+# - name: set oh-my-posh to executable
+#   tags: oh-my-posh
+#   file:
+#     path: /usr/local/bin/oh-my-posh
+#     mode: +x
+
+# - name: install oh-my-posh themes
+#   tags: oh-my-posh
+#   unarchive:
+#     src: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/themes.zip
+#     dest: /home/{{ user }}/.poshthemes
+#     remote_src: yes
+#     mode: u+rw
+#     owner: "{{ user }}"
+#     group: "{{ user }}"
