--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -5,7 +5,6 @@
   - include_tasks: nala.yml
   - include_tasks: ../antix/tasks/zsh-alias.yml
   - include_tasks: files.yml
-  - include_tasks: fastfetch.yml
   - include_tasks: xfconf.yml
   - include_tasks: tilix_config.yml
   - include_tasks: autologin.yml
@@ -17,3 +16,4 @@
   # - include_tasks: samba.yml
   # - include_tasks: sudoers.yml
   # - include_tasks: oh-my-posh.yml
+  # - include_tasks: fastfetch.yml
