--- a/roles/base/vars/Debian.yml
+++ b/roles/base/vars/Debian.yml
@@ -25,3 +25,4 @@ alias_template_file: alias.j2
 zshrc_template_file: zshrc.j2
 vimrc_template_file: vimrc.j2
 fetch: fastfetch --load-config examples/10.jsonc
+conky: conky-all
