--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -1,7 +1,6 @@
 - block:
   - include_tasks: packages.yml
   - include_tasks: directories.yml
-  - include_tasks: duf.yml
   - include_tasks: nala.yml
   - include_tasks: ../antix/tasks/zsh-alias.yml
   - include_tasks: files.yml
@@ -17,3 +16,4 @@
   # - include_tasks: sudoers.yml
   # - include_tasks: oh-my-posh.yml
   # - include_tasks: fastfetch.yml
+  # - include_tasks: duf.yml
