--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -1,7 +1,7 @@
 - block:
   - include_tasks: packages.yml
   - include_tasks: directories.yml
-  - include_tasks: nala.yml
+  # - include_tasks: nala.yml
   - include_tasks: ../antix/tasks/zsh-alias.yml
   - include_tasks: files.yml
   - include_tasks: vim.yml
