--- a/roles/void/tasks/main.yml
+++ b/roles/void/tasks/main.yml
@@ -8,13 +8,14 @@
   - include_tasks: ../base/tasks/conky.yml
   - include_tasks: ../base/tasks/fonts.yml
   - include_tasks: fonts.yml
-  - include_tasks: ../base/tasks/onedrivegui.yml
-  - include_tasks: ../base/tasks/nano.yml
   - include_tasks: ../fedora/tasks/oh-my-posh.yml
   - include_tasks: zsh-alias.yml
   - include_tasks: sddm.yml
   - include_tasks: discord.yml
-  - include_tasks: onedrive.yml
   - include_tasks: theme-config.yml
   - include_tasks: ../fedora/tasks/tilix_config.yml
   - include_tasks: virtualbox.yml
+
+  # - include_tasks: ../base/tasks/onedrivegui.yml
+  # - include_tasks: ../base/tasks/nano.yml
+  # - include_tasks: onedrive.yml
