--- a/roles/debian/tasks/zsh-alias.yml
+++ b/roles/debian/tasks/zsh-alias.yml
@@ -6,21 +6,21 @@
 #    owner: "{{ user }}"
 #    group: "{{ user }}"
 
-- name: zsh config file - 1
-  tags: zsh
-  copy:
-    src: files/zshrc
-    dest: /home/{{ user }}/.zshrc
-    owner: "{{ user }}"
-    group: "{{ user }}"
+# - name: zsh config file - 1
+#   tags: zsh
+#   copy:
+#     src: files/zshrc
+#     dest: /home/{{ user }}/.zshrc
+#     owner: "{{ user }}"
+#     group: "{{ user }}"
 
-- name: zsh config file - 2
-  tags: zsh
-  copy:
-   src: files/p10k.zsh
-   dest: /home/{{ user }}/.p10k.zsh
-   owner: "{{ user }}"
-   group: "{{ user }}"
+# - name: zsh config file - 2
+#   tags: zsh
+#   copy:
+#    src: files/p10k.zsh
+#    dest: /home/{{ user }}/.p10k.zsh
+#    owner: "{{ user }}"
+#    group: "{{ user }}"
 
 # - name: alias file
 #   tags: alias
