--- a/roles/cbpp/tasks/files.yml
+++ b/roles/cbpp/tasks/files.yml
@@ -8,6 +8,18 @@
     group: "{{ user }}"
     backup: yes
 
+- name: Ensure user config directories exist
+  file:
+    path: "{{ item }}"
+    state: directory
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    mode: '0755'
+  loop:
+    - /home/{{ user }}/.config/openbox
+    - /home/{{ user }}/.config/tint2
+    - /home/{{ user }}/.poshthemes
+
 - name: install conky config
   tags: theme
   copy:
@@ -33,29 +45,18 @@
     group: "{{ user }}"
     backup: yes
 
-- name: install menu config
+- name: Install OpenBox configurations
   copy:
-    src: files/menu.xml
-    dest: /home/{{ user }}/.config/openbox/
+    src: "files/{{ item }}"
+    dest: "/home/{{ user }}/.config/openbox/{{ item }}"
     owner: "{{ user }}"
     group: "{{ user }}"
+    mode: '0644'
     backup: yes
-
-- name: install rc config
-  copy:
-    src: files/rc.xml
-    dest: /home/{{ user }}/.config/openbox/
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    backup: yes
-
-- name: install tint2 config
-  copy:
-    src: files/tint2rc
-    dest: /home/{{ user }}/.config/tint2/
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    backup: yes
+  loop:
+    - autostart
+    - menu.xml
+    - rc.xml
 
 - name: install lxdm config - autologin
   copy:
@@ -79,11 +80,6 @@
     src: files/cairo-dock.tar.gz
     dest: /home/{{ user }}/.config/
 
-# - name: download Writer icon
-#   copy:
-#     src: files/LibreOffice_Writer.png
-#     dest: /home/{{ user }}/.config/cairo-dock/current_theme/icons
-
 - name: download tilix settings script
   tags: tilix,settings
   copy:
@@ -93,19 +89,14 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
-- name: install peru theme
+- name: Install PowerShell Oh My Posh themes
   copy:
-    src: files/peru.omp.json
-    dest: /home/{{ user }}/.poshthemes/
+    src: "{{ item }}"
+    dest: "/home/{{ user }}/.poshthemes/{{ item | basename }}"
     owner: "{{ user }}"
     group: "{{ user }}"
+    mode: '0644'
     backup: yes
-
-- name: install amro theme
-  copy:
-    src: files/amro.omp.json
-    dest: /home/{{ user }}/.poshthemes/
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    backup: yes
-
+  loop:
+    - files/peru.omp.json
+    - files/amro.omp.json
